<resources>
    <string name="app_name">Home Task Manager</string>
    <string name="tasks">Tasks</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="group">Group</string>
    <string name="groups">Groups</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_status_description">Task status symbol</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="account_type">account_type_tasks</string>
</resources>